--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.0",
     "bootstrap": "^4.4.1",
+    "bootstrap-less": "^3.3.8",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "history": "^4.10.1",
@@ -17,6 +18,7 @@
     "react-bootstrap": "^1.0.0-beta.16",
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.12.0",
+    "react-js-pagination": "^3.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
   },
