--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "express": "^4.17.1",
     "history": "^4.10.1",
     "material-ui": "^0.20.2",
+    "rc-pagination": "^1.20.12",
+    "rc-select": "^9.2.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-confirm-alert": "^2.4.1",
